--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <style>
   .main {text-decoration: none; color: black; font-family:apple SD 산돌고딕 Neo; font-weight: bold; font-size: 50px;}
   #topmenu {height: 60px; width: 3000px;}
-  #topmenu ul li {list-style: none; color: white; background-color: #2d2d2d; float: left;
-    line-height: 30px; vertical-align: middle; text-align: center;}
-  #topmenu .category {text-decoration: none; color: white; display: block; width: 265px;
+  #topmenu ul {list-style: none; margin: 0px; padding: 0px;}
+  #topmenu ul li {color: white; background-color: #2d2d2d; float: left;
+    line-height: 30px; vertical-align: middle; text-align: center; position: relative;}
+  .category .submenulink {text-decoration: none; display: block; width: 150px;
     font-size: 12px; font-weight: bold; font-family: apple SD 산돌고딕 Neo;}
-  #topmenu .category:hover {color: pink; background-color: #4d4d4d}
+  .category {text-decoration: none; color: white; display: block; width: 265px;
+    font-size: 12px; font-weight: bold; font-family: apple SD 산돌고딕 Neo;}
+  .topmenuli:hover .category {color: pink; background: #4d4d4d;}
+  .submenulink {color: #2d2d2d; background-color: white; border: solid 1px white; margin-top: -1px;}
+  .longlink {width: 190px;}
+  .category:hover {color: pink; background-color: #4d4d4d}
+  .submenu {position: absolute; height: 0px; overflow: hidden; transition: height .2s;}
+  .topmenuli:hover .submenu {height: 93px;}
+  .submenulink:hover {color: pink; background-color: #dddddd;}
   </style>
   <meta charset="utf-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -28,18 +37,25 @@
 <hr/>
 <nav id="topmenu">
 <ul>
-<li><a href="1.html" class="category"><strong>Diary</strong></a></li>
+<li class="topmenuli"><a href="1.html" class="category"><strong>Diary</strong></a></li>
 <li>|</li>
-<li><a href="2.html" class="category"><strong>To Do List</strong></a></li>
+<li class="topmenuli"><a href="2.html" class="category"><strong>To Do List</strong></a></li>
 <li>|</li>
-<li><a href="3.html" class="category"><strong>Review</strong></a></li>
+<li class="topmenuli"><a href="3.html" class="category"><strong>Review</strong></a></li>
+  <ul class="submenu">
+    <li><a href="3-1.html" class="submenulink">드라마</a></li>
+    <li><a href="3-2.html" class="submenulink">영화</a></li>
+    <li><a href="3-3.html" class="submenulink">연극</a></li>
+    <li><a href="3-4.html" class="submenulink">책</a></li>
+    <li><a href="3-5.html" class="submenulink">음식</a></li>
+    <li><a href="3-6.html" class="submenulink">기타</a></li>
+  </ul>
 <li>|</li>
-<li><a href="4.html" class="category"><strong>Wish List</strong></a></li>
+<li class="topmenuli"><a href="4.html" class="category"><strong>Wish List</strong></a></li>
 <li>|</li>
-<li><a href="5.html" class="category"><strong>Memo</strong></a></li>
+<li class="topmenuli"><a href="5.html" class="category"><strong>Memo</strong></a></li>
 </ul>
 </nav>
-책, 드라마, 영화, 연극, 음식, 화장품, 제품
 
 <div id="disqus_thread"></div>
 <script>
